--- a/_includes/friends.html
+++ b/_includes/friends.html
@@ -1,9 +1,11 @@
 {% if site.friends %}
 <hr>
 <h5>FRIENDS</h5>
-<ul class="list-inline">
+<ul class="list-group">
   {% for friend in site.friends %}
-  <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+  <li class="list-group-item">
+    <a href="{{friend.href}}">{{friend.title}}</a>
+  </li>
   {% endfor %}
 </ul>
 {% endif %}
