--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,7 @@
     <a target="_blank" href="https://www.researchgate.net/profile/{{ site.researchgate_username | uri_escape }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+        <i class="fa fa-researchgate fa-stack-1x fa-inverse"></i>
       </span>
     </a>
   </li>
