--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -21,70 +21,49 @@
   {% if site.twitter_username %}
   <li>
     <a href="https://twitter.com/{{ site.twitter_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-twitter fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.zhihu_username %}
   <li>
     <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">知</i>
-      </span>
+      <i class="fa-brands fa-zhihu fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.weibo_username %}
   <li>
     <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-weibo fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.facebook_username %}
   <li>
     <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-facebook fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.github_username %}
   <li>
     <a target="_blank" href="https://github.com/{{ site.github_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-github fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.linkedin_username %}
   <li>
     <a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-linkedin fa-lg"></i>
     </a>
   </li>
   {% endif %}
   {% if site.researchgate_username %}
   <li>
     <a target="_blank" href="https://www.researchgate.net/profile/{{ site.researchgate_username | uri_escape }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-researchgate fa-stack-1x fa-inverse"></i>
-      </span>
+      <i class="fa-brands fa-researchgate fa-lg"></i>
     </a>
   </li>
   {% endif %}
